# nevus_app

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
templates/: index.html  result.html
